--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/data
-/output
-/output_with_filter
+/data/*
+/output/*
+/output_with_filter/*
 /scripts/test.ipynb
-/scripts/__pycache__
+/scripts/__pycache__/*
